fix: x% match labels do not align with project titles in sponsor cards (#67)

--- a/containers/PageHome/containers/ProjectCarousel/components/ProjectCard/index.module.scss
+++ b/containers/PageHome/containers/ProjectCarousel/components/ProjectCard/index.module.scss
@@ -13,11 +13,11 @@
 
 .afterBackdrop {
   margin-top: -30px;
-  &.narrow {
+  .paddingNarrow & {
     padding: 0 32px 24px 32px;
   }
 
-  &.normal {
+  .paddingNormal & {
     padding: 0 56px 48px 56px;
   }
 }
@@ -96,7 +96,16 @@
   background-color: #fff;
   border-radius: 65px;
   padding: 8px 12px;
-  top: 32px;
-  left: 56px;
+
+  .paddingNormal & {
+    left: 56px;
+    top: 32px;
+  }
+
+  .paddingNarrow & {
+    left: 32px;
+    top: 16px;
+  }
+
   z-index: 1;
 }
